2008-06-17  Mike Kestner  <mkestner@novell.com>

	* glib/SignalClosure.cs: post back the gvalues after the closure is
	invoked using a new Update method on GLib.Value.  This only impacts
	boxed types, since they are the only "value types" passed by ref in
	the signal marshaling environment.  We can't call set_boxed on the
	value to update it, since that allocs new memory, we need to marshal
	the updated struct out to the existing native memory address using
	g_value_get_boxed.
	* glib/Value.cs (Update): new update method for writing values to
	an existing boxed type instance instead of allocating a new native
	struct.  Fixes #398929.

2008-06-17  Mike Kestner  <mkestner@novell.com>

	* glib/GType.cs (LookupType): traversed referenced assemblies to
	find types in currently unloaded assemblies.  Fixes #400595.

2008-06-16  Andrés G. Aragoneses <aaragoneses@novell.com>

	* atk/Object.custom:
	* atk/glue/object.c:
	Simplified code for previous issue (recommendation from mkestner).

2008-06-16  Mike Kestner  <mkestner@novell.com>

	* glib/glue/object.c: fixes for object, boxed, and gtype
	property paramspec creation. Patch provided by Christian Hoff.

2008-06-09  Andrés G. Aragoneses <aaragoneses@novell.com>

	* atk/Object.custom:
	* atk/glue/object.c:
	Temporary workaround for infinite recursion issue.

2008-06-06  Andrés G. Aragoneses <aaragoneses@novell.com>

	* glib/glue/thread.c: Fix a warning.

2008-06-06  Mike Kestner  <mkestner@novell.com>

	Initial Patch submitted by Christian Hoff with some small
	style alterations and a round trip sample by me.  Supports the 
	registration of managed properties with the GType system, so 
	that things like custom cell renderers can be accessed via the
	native property system from treeview.

	* glib/glue/object.c : property registration related glue.
	* glib/Object.cs: implement managed property registration.
	* glib/PropertyAttribute.cs: add new props and ctor for managed
	property registration.