@@ -1,3 +1,8 @@
+2008-06-20  Mike Kestner  <mkestner@novell.com>
+
+	* glib/Value.cs: Patch from Christian Hoff.  Support for byte and
+	sbyte values.
+
 2008-06-17  Mike Kestner  <mkestner@novell.com>
 
 	* glib/SignalClosure.cs: post back the gvalues after the closure is
